# jila

./: .gitignore  .gitmodules  .luarc.json  CLAUDE.md  LICENSE  README.md
docs/: .gitignore  EVENTS.md  index.md  package.json
docs/.vitepress/: config.mts
docs/funcs/: lib_events.md
docs/guide/: index.md
examples/sample_app/: module1.lua
src/: CMakeLists.txt  main.cpp  misc.cpp  misc.hpp  proxy.hpp
src/app/: jila_app.hpp  jila_app.tpl  lua_to_one_cpp.py
src/cmake/: luajit.cmake
src/cmake/lua_jit/: CMakeLists.txt
src/components/: components.hpp
src/components/database/: c_database.cpp  c_database.hpp  database.lua
src/components/engine/: c_engine.cpp  c_engine.hpp  core.lua  logger.lua
src/components/filesystem/: fs.cpp  fs.hpp  fs.lua
src/components/font/: fa-font.lua  fa_font.cpp  fa_font.hpp
src/components/imgui/: c_flags.cpp  c_flags.hpp  c_flags.lua  c_imgui.cpp  c_imgui.hpp  c_imgui.lua  c_input.cpp  c_input.lua  c_item_state.cpp  c_item_state.hpp  c_item_state.lua  c_properties.hpp  c_properties.lua  c_utils.cpp  c_utils.hpp  c_utils.lua  c_widgets.cpp  c_widgets.hpp  c_widgets.lua  c_window.cpp  c_window.hpp  c_window.lua  с_input.hpp  с_properties.cpp
src/components/net/: c_net.cpp  c_net.hpp  net.lua
src/components/properties/: c_properties.cpp  c_properties.hpp  property.lua
src/components/sdl3/: audio.cpp  audio.hpp  audio.lua  c_sdl3.cpp  c_sdl3.hpp  events.cpp  events.hpp  events.lua  images.cpp  images.hpp  images.lua  micro.cpp  micro.hpp  micro.lua  timer.cpp  timer.hpp  timer.lua  window.cpp  window.hpp  window.lua
src/components/system/: android.lua  c_system.cpp  c_system.hpp  jila_android.cpp  jila_android.hpp  sys_android.cpp  sys_android.hpp  system.lua
src/components/threads/: c_threads.cpp  c_threads.hpp  threads.lua
src/engine/: README.md  component.cpp  component.hpp  errors.cpp  errors.hpp  hot_reloader.cpp  hot_reloader.hpp  logger.cpp  logger.hpp  runtime.cpp  runtime.hpp
